argocd/ui-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopardy-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devopardy-ui
  template:
    metadata:
      labels:
        app: devopardy-ui
    spec:
      containers:
      - name: devopardy-ui
        image: devopswithbrian/devopardy-ui:1.3.1
        ports:
        - containerPort: 3000
