argocd/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devopardy-ui
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-default-protocol: http
    service.beta.kubernetes.io/linode-loadbalancer-port-443: '{ "letsencrypt-secret-prod", "protocol": "https" }'
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: devopardy-ui
