argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopardy-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - devopardy.devopswithbrian.com
    secretName: devopardy-tls
  rules:
  - host: devopardy.devopswithbrian.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: devopardy-ui
            port:
              number: 80
